--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="result">
             <p id="bmi-value"></p>
             <p id="interpretation"></p>
+            <p id="text"></p>
         </div>
     </div>
 
